# siyi_cam_executor_plugin

./: .gitignore  CMakeLists.txt  package.xml  plugins.xml
config/: config.yaml  siyi_camera_config.yaml  siyi_gimbal_config.yaml
include/siyi_executor/: camera_plugin.hpp  gimbal_plugin.hpp
src/: camera_plugin.cpp  gimbal_plugin.cpp
